<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_header"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding_head_from_top"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/primary_text_size" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_search_text"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/search_ic"
        style="@style/button_main_layout_style"/>

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_media_text"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/media_ic"
        style="@style/button_main_layout_style"/>


    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_settings_text"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/settings_ic"
        style="@style/button_main_layout_style"/>


</LinearLayout>